# cpp_multi

p1/: CMakeLists  CMakeLists.txt  mymain.cpp
p1/include/: myarea.h
p1/src/: mycircle.cpp  myrect.cpp
prac1/: CMakeLists.txt  main.cpp
prac1/include/: head.h
prac1/src/: Fabricate.cpp  Multi.cpp
set/: CMakeLists.txt  test.cpp
set/include/: set.h
set/src/: setoperate.cpp
test/: CMakeLists.txt  main.cpp
test/include/: test.h
test/src/: test.cpp
